# nhl-projection-starter

nhl_phase2/nhl_projection_starter/: README.md
nhl_projection_final_sources/: README.md  pyproject.toml
nhl_projection_final_sources/scripts/: __init__.py  run_all_probes.py  run_debug_paths.py  run_phase2_full_pipeline.py  run_phase2_nhl_ingest.py  run_phase2a_nhl_api_ingest.py  run_phase2b_hockeyref_ingest.py  run_phase2d_dailyfaceoff_ingest.py  run_phase2e_reference_audit.py  run_phase2f_build_silver.py  run_phase2g_validate_outputs.py  run_phase2h_field_inventory.py
nhl_projection_phase1_reset_audit/: README.md  pyproject.toml  requirements.txt
nhl_projection_phase1_reset_audit/scripts/: run_debug_paths.py  run_phase1_full_audit.py  run_phase1a_nhl_api_audit.py  run_phase1b_moneypuck_audit.py  run_phase1c_generate_sheet_templates.py  run_phase1d_build_field_map.py  run_phase1e_download_actual_tables.py  run_phase1e_google_sheets_smoke_test.py  run_phase1f_build_final_field_map.py
nhl_projection_phase1_reset_audit/src/nhl_model/: config.py  constants.py
nhl_projection_phase1_reset_audit/src/nhl_model/audit/: actual_tables.py  field_map.py  moneypuck_audit.py  nhl_api_audit.py  sheets_templates.py
nhl_projection_phase1_reset_audit/src/nhl_model/utils/: http.py  io.py  normalize.py  time_utils.py
nhl_projection_revised_v3/: README.md
nhl_projection_revised_v3/scripts/: run_phase2_full_pipeline.py  run_phase2b_hockeyref_ingest.py  run_phase2g_validate_outputs.py
nhl_projection_starter/: requirements.txt
nhl_projection_updated_source_map/: README.md
(+34 files in other folders)
